Update README according to Modrinth feedback